# mecab-userdic-build

./: README.md  pyproject.toml
.github/actions/ipadic-install/: action.yml
.github/actions/mecab-install/: action.yml
.github/workflows/: build_userdic.yml  test.yml
dict_words/: sample.csv
mecab_userdic_build/: create_userdic.py  mecab_tagger.py
tests/: test_create_userdic.py  test_mecab_tagger.py
