[tool.poetry]
name = "mecab-userdic-build"
version = "0.1.0"
description = ""
authors = ["shihono <26952997+shihono@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mecab-python3 = "^1.0.8"
unidic-lite = "^1.0.8"
jaconv = "^0.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
